# advent-of-code-2024

./: Cargo.toml
input/day13/: test_input2.txt
src/day1-1/: main.rs
src/day1-2/: main.rs
src/day10/: main-p1.rs  main-p2.rs
src/day11/: main-p1.rs  main-p2.rs
src/day12/: main-p1.rs  main-p2.rs
src/day13/: main-p1.rs  main-p2.rs
src/day14/: main-p1.rs  main-p2.rs
src/day16/: main-p1.rs
src/day2-1/: main.rs
src/day2-2/: main.rs
src/day3-1/: main.rs
src/day3-2/: main.rs
src/day4-1/: main.rs
src/day4-2/: main.rs
src/day5-1/: main.rs
src/day5-2/: main.rs
src/day6-1/: main.rs
src/day6-2/: main.rs
src/day7-1/: main.rs
src/day7-2/: main.rs
src/day8-1/: main.rs
src/day8-2/: main.rs
src/day9/: main-p1.rs  main-p2.rs
src/day9-1/: main.rs
src/day9-2/: main.rs
src/day9/domain/: disk.rs  mod.rs  segment.rs
src/lib/: lib.rs
src/lib/day10/domain/: map.rs  mod.rs  trail.rs
src/lib/day11/cache/: cache.rs  mod.rs  stones.rs
src/lib/day12/: directions.rs  field.rs  garden.rs  mod.rs
src/lib/day13/: button_presses.rs  machine.rs  mod.rs
src/lib/day16/: mod.rs  reindeer.rs  visited.rs
src/lib/day9/domain/: disk.rs
