[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1"
radix_fmt = "1"

[dev-dependencies]
claims = "0.8"

[[bin]]
path = "src/day1-1/main.rs"
name = "day1-1"

[[bin]]
path = "src/day1-2/main.rs"
name = "day1-2"

[[bin]]
path = "src/day2-1/main.rs"
name = "day2-1"

[[bin]]
path = "src/day2-2/main.rs"
name = "day2-2"

[[bin]]
path = "src/day3-1/main.rs"
name = "day3-1"

[[bin]]
path = "src/day3-2/main.rs"
name = "day3-2"

[[bin]]
path = "src/day4-1/main.rs"
name = "day4-1"

[[bin]]
path = "src/day4-2/main.rs"
name = "day4-2"

[[bin]]
path = "src/day5-1/main.rs"
name = "day5-1"

[[bin]]
path = "src/day5-2/main.rs"
name = "day5-2"

[[bin]]
path = "src/day6-1/main.rs"
name = "day6-1"

[[bin]]
path = "src/day6-2/main.rs"
name = "day6-2"

[[bin]]
path = "src/day7-1/main.rs"
name = "day7-1"

[[bin]]
path = "src/day7-2/main.rs"
name = "day7-2"

[[bin]]
path = "src/day8-1/main.rs"
name = "day8-1"

[[bin]]
path = "src/day8-2/main.rs"
name = "day8-2"

[lib]
path = "src/day9/lib.rs"
name = "day9"

[[bin]]
path = "src/day9-1/main.rs"
name = "day9-1"

[[bin]]
path = "src/day9-2/main.rs"
name = "day9-2"
