[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

[dependencies]
regex = "1"
radix_fmt = "1"
claims = "0.8"
lazy_static = "1.5.0"
num = "0.4"

[[bin]]
path = "src/day1-1/main.rs"
name = "day1-1"

[[bin]]
path = "src/day1-2/main.rs"
name = "day1-2"

[[bin]]
path = "src/day2-1/main.rs"
name = "day2-1"

[[bin]]
path = "src/day2-2/main.rs"
name = "day2-2"

[[bin]]
path = "src/day3-1/main.rs"
name = "day3-1"

[[bin]]
path = "src/day3-2/main.rs"
name = "day3-2"

[[bin]]
path = "src/day4-1/main.rs"
name = "day4-1"

[[bin]]
path = "src/day4-2/main.rs"
name = "day4-2"

[[bin]]
path = "src/day5-1/main.rs"
name = "day5-1"

[[bin]]
path = "src/day5-2/main.rs"
name = "day5-2"

[[bin]]
path = "src/day6-1/main.rs"
name = "day6-1"

[[bin]]
path = "src/day6-2/main.rs"
name = "day6-2"

[[bin]]
path = "src/day7-1/main.rs"
name = "day7-1"

[[bin]]
path = "src/day7-2/main.rs"
name = "day7-2"

[[bin]]
path = "src/day8-1/main.rs"
name = "day8-1"

[[bin]]
path = "src/day8-2/main.rs"
name = "day8-2"

[[bin]]
path = "src/day9/main-p1.rs"
name = "day9-1"

[[bin]]
path = "src/day9/main-p2.rs"
name = "day9-2"

[[bin]]
path = "src/day10/main-p1.rs"
name = "day10-1"

[[bin]]
path = "src/day10/main-p2.rs"
name = "day10-2"

[[bin]]
path = "src/day11/main-p1.rs"
name = "day11-1"

[[bin]]
path = "src/day11/main-p2.rs"
name = "day11-2"

[[bin]]
path = "src/day12/main-p1.rs"
name = "day12-1"

[[bin]]
path = "src/day12/main-p2.rs"
name = "day12-2"

[[bin]]
path = "src/day13/main-p1.rs"
name = "day13-1"

[[bin]]
path = "src/day13/main-p2.rs"
name = "day13-2"

[lib]
path = "src/lib/lib.rs"
name = "lib"

debug = true
opt-level = 0
